# myrustllm

./: .gitignore  Cargo.toml  README.md  build.rs
.devcontainer/: Dockerfile  devcontainer.json
crates/myrustllm/: Cargo.toml  build.rs  expand.rs
crates/myrustllm-derive/: Cargo.toml
crates/myrustllm-derive/src/: lib.rs
crates/myrustllm/myrustllm-cpu/: CMakeLists.txt
crates/myrustllm/myrustllm-cpu/include/: init.h  myrustllm-cpu.h  tensor.h
crates/myrustllm/myrustllm-cpu/src/: init.cpp  init.h  math.cpp
crates/myrustllm/myrustllm-cpu/src/ops/: binary_ops.cpp  binary_ops.h  blas.cpp  blas.h  cast.cpp  cast.h  (+2 more)
crates/myrustllm/myrustllm-cuda/include/: myrustllm-cuda.h
crates/myrustllm/myrustllm-cuda/src/: gemm.cu  mem.cpp
crates/myrustllm/src/: lib.rs  main.rs
crates/myrustllm/src/autograd/: autograd_guard.rs  graph.rs  impls.rs  init.rs  mod.rs
crates/myrustllm/src/common/: autograd.rs  device.rs  dtype.rs  dynamic.rs  impls.rs  init.rs  io.rs  math.rs  mod.rs  shape.rs  tensor.rs
crates/myrustllm/src/cpu/: dynamic.rs  impls.rs  init.rs  interface.rs  literal.rs  math.rs  mem.rs  mod.rs  tensor.rs
crates/myrustllm/src/cuda/: dynamic.rs  interface.rs  math.rs  tensor.rs  transfer.rs
crates/myrustllm/src/nn/: init.rs  linear.rs  mod.rs  module.rs  optimizer.rs  parameter.rs
crates/myrustllm/src/optim/: optimizer.rs  sgd.rs
myrustllm-cpu/: CMakeLists.txt
myrustllm-cpu/include/: math.h  myrustllm-cpu.h  tensor.h
myrustllm-cpu/src/: math.cpp
myrustllm-cuda/: CMakeLists.txt
myrustllm-cuda/include/: check.h  gemm.cuh  math.cuh  myrustllm-cuda.h
myrustllm-cuda/src/: math.cu
src/: lib.rs  main.rs
src/common/: autograd.rs  device.rs  dtype.rs  dynamic.rs  math.rs  mod.rs  shape.rs  tensor.rs
src/cpu/: autograd.rs  dynamic.rs  literal.rs  math.rs  mem.rs  mod.rs  shape.rs  slice.rs  tensor.rs
src/cuda/: dynamic.rs  gemm.rs  interface.rs  math.rs  mem.rs  mod.rs  tensor.rs  transfer.rs
(+16 files in other folders)
